--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "componentits",
   "version": "1.0.2",
-  "description": "component for mobile",
+  "description": "Component for mobile",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,12 +11,18 @@
     "url": "git+https://github.com/TrongVT/ComponentKiOp.git"
   },
   "keywords": [
-    "component-ki-op"
+    "componentits",
+    "react-native"
   ],
   "author": "kiop",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/TrongVT/ComponentKiOp/issues"
   },
-  "homepage": "https://github.com/TrongVT/ComponentKiOp#readme"
+  "homepage": "https://github.com/TrongVT/ComponentKiOp#readme",
+  "dependencies": {
+    "@expo/vector-icons": "^6.3.1",
+    "react": "16.3.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz"
+  }
 }
