--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/TrongVT/ComponentKiOp.git"
   },
-  "keywords": [
-    "componentits",
-    "react-native"
-  ],
+  "keywords": ["componentits", "react-native"],
   "author": "kiop",
   "license": "ISC",
   "bugs": {
@@ -21,8 +18,9 @@
   },
   "homepage": "https://github.com/TrongVT/ComponentKiOp#readme",
   "dependencies": {
-    "@expo/vector-icons": "6.2.2",
+    "react-native-vector-icons": "^4.1.1",
     "react": "16.2.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz"
+    "react-native":
+      "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz"
   }
 }
