--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/TrongVT/ComponentKiOp#readme",
   "dependencies": {
+    "prop-types": "^15.6.1",
     "react-native-vector-icons": "^4.1.1",
     "react": "16.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz"
