--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "prop-types": "^15.6.1",
     "react-native-vector-icons": "^4.1.1",
     "react": "16.2.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz"
+    "react-native": "~0.54.4"
   }
 }
