--- a/package.json
+++ b/package.json
@@ -19,11 +19,5 @@
   "bugs": {
     "url": "https://github.com/TrongVT/ComponentKiOp/issues"
   },
-  "homepage": "https://github.com/TrongVT/ComponentKiOp#readme",
-  "dependencies": {
-    "prop-types": "^15.6.1",
-    "react-native-vector-icons": "^4.1.1",
-    "react": "16.2.0",
-    "react-native": "~0.54.4"
-  }
+  "homepage": "https://github.com/TrongVT/ComponentKiOp#readme"
 }
