--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "componentits",
-  "version": "1.0.41",
+  "version": "1.1.0",
   "description": "Component for mobile",
   "main": "index.js",
   "scripts": {
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/TrongVT/ComponentKiOp#readme",
   "dependencies": {
+    "moment": "2.19.3",
+		"tinymask": "^1.0.2",
     "lodash": "^4.17.5",
     "prop-types": "^15.6.1",
     "react-native-modal": "^5.4.0",
